chore: misc otel changes